# nightswitch

./: .coverage  .gitignore  LICENSE  README.md  coverage.xml  enable-autostart.sh  install.sh  me.pygillier.Nightswitch.yml  org.nightswitch.Nightswitch.yml  pyproject.toml  taskfile.yaml  tasks.py
.kiro/specs/nightswitch-app/: design.md  requirements.md  tasks.md
.kiro/steering/: development-workflow.md  python-uv-requirements.md
data/: me.pygillier.Nightswitch.desktop  nightswitch.service  org.nightswitch.Nightswitch.desktop  org.nightswitch.Nightswitch.metainfo.xml
src/nightswitch/: __init__.py  main.py
src/nightswitch/core/: __init__.py  config.py  debug_tools.py  error_handler.py  location_mode.py  logging_manager.py  manual_mode.py  mode_controller.py  notification.py  schedule_mode.py
src/nightswitch/plugins/: __init__.py  base.py  manager.py  ubuntu_budgie.py
src/nightswitch/services/: __init__.py  location.py  schedule.py  sunrise_sunset.py
src/nightswitch/ui/: __init__.py  main_window.py  system_tray.py
src/nightswitch/ui/dialogs/: __init__.py  about_dialog.py  error_dialog.py  help_dialog.py
src/nightswitch/ui/tabs/: __init__.py  location_tab.py  manual_tab.py  preferences_tab.py  schedule_tab.py
tests/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_complete_workflows.py  test_location_mode.py  test_main_window_integration.py  test_system_tray_integration.py  test_ubuntu_budgie_integration.py
tests/unit/: __init__.py  test_config.py  test_error_handler.py  test_error_handler_logging.py  test_location_mode.py  test_location_service.py  test_logging_integration.py  test_logging_manager.py  test_main.py  test_manual_mode.py  test_mode_controller.py  test_notification.py  test_plugin_base.py  test_plugin_manager.py  test_schedule_mode.py  test_schedule_service.py  test_settings_persistence.py  test_sunrise_sunset_service.py  test_ubuntu_budgie_plugin.py
