[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nightswitch"
version = "0.1.0"
description = "A PyGTK 3 application for managing night mode (dark/light theme switching) in Linux desktop environments"
readme = "README.md"
requires-python = ">=3.13"
package = false
license = {text = "MIT"}
authors = [
    {name = "Nightswitch Team"},
]
keywords = ["gtk", "theme", "dark-mode", "linux", "desktop", "flatpak"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
]

dependencies = [
    "PyGObject>=3.46.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
nightswitch = "nightswitch.main:main"

[project.urls]
Homepage = "https://github.com/pygillier/nightswitch"
Repository = "https://github.com/pygillier/nightswitch"
Issues = "https://github.com/pygillier/nightswitch/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/nightswitch"]

[tool.hatch.build.targets.wheel.shared-data]
"data" = "share/nightswitch"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/data",
    "/README.md",
    "/LICENSE",
    "/org.nightswitch.Nightswitch.yml",
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/nightswitch",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "system: System tests",
]

[dependency-groups]
dev = [
    "pygobject-stubs>=2.13.0",
]
